# cpp11

./: .gitignore
01_sz/: CMakeLists.txt  feladat.txt  main.cpp
hazi1/: mystring.cpp  mystring.h  test.cpp
sorter/: CMakeLists.txt  Makefile  app.cpp  app.h  basesorter.hpp  column.cpp  column.h  listener.h  main.cpp  sorter.mk  sorter.project  sorter.txt
szrsz/: feladat.txt  main.cpp  szrsz.cbp  szrsz.layout
